# DataSamoryBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
src/bot/: handlers.py
src/services/: ai_service.py  web_scraper.py
